Fixed a bug of todo description overflowing its container.

--- a/components/TodoItem.module.css
+++ b/components/TodoItem.module.css
@@ -10,6 +10,7 @@
   font-weight: 500;
   margin-right: auto;
   padding-right: 0.5rem;
+  word-break: break-all;
 }
 
 .delete-button {
